# stdcoll

./: CMakeLists.txt
header/stdcoll/: collection.h  collection_impl.h  collections.h  linked_list.h  list.h  list_impl.h  operators.h
header/stditr/: iterator.h  iterator_impl.h
impl/stdcoll/: collection.c  linked_list.c  linked_list_collections.c  list.c  operators.c
impl/stditr/: iterator.c
test/: CMakeLists.txt  main.c
test/assert/: assert.c  assert.h  assert_impl.h
test/assertions/: assertions.c  assertions.h  assertions_list.c  assertions_list.h
test/common/: assert.c  assert.h  assert_impl.h  main.c  suite.h
test/log/: print.h
test/stdcoll/: collections_iterator_test.c  collections_test.c  linked_list_iterator_test.c  linked_list_test.c  linked_list_test_as_coll_st.c
test/suite/: suite.h
